# obsistant

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml  utils.py
.github/workflows/: ci.yml
obsidian_formatter/: __init__.py  cli.py  processor.py
obsistant/: __init__.py  cli.py  processor.py  utils.py
obsistant/agents/: README.md  __init__.py
obsistant/agents/calendar_flow/src/calendar_flow/: llm_config.py  main.py
obsistant/agents/calendar_flow/src/calendar_flow/crews/: models.py
obsistant/agents/calendar_flow/src/calendar_flow/crews/calendar_crew/: __init__.py  calendar_crew.py
obsistant/agents/calendar_flow/src/calendar_flow/crews/calendar_crew/config/: agents.yaml  tasks.yaml
obsistant/agents/calendar_flow/src/calendar_flow/crews/concert_crew/: __init__.py  concert_crew.py
obsistant/agents/calendar_flow/src/calendar_flow/crews/concert_crew/config/: agents.yaml  tasks.yaml
obsistant/agents/calendar_flow/src/calendar_flow/crews/summary_crew/: __init__.py  summary_crew.py
obsistant/agents/calendar_flow/src/calendar_flow/crews/summary_crew/config/: agents.yaml  tasks.yaml
obsistant/agents/calendar_flow/src/calendar_flow/crews/work_crew/: __init__.py  work_crew.py
obsistant/agents/calendar_flow/src/calendar_flow/crews/work_crew/config/: agents.yaml  tasks.yaml
obsistant/agents/calendar_flow/src/calendar_flow/tools/: __init__.py  get_next_week_events_tool.py  qdrant_search_tool.py
obsistant/agents/common/: __init__.py  llm_config.py
obsistant/agents/deep_research_flow/src/deep_research_flow/: main.py
obsistant/agents/deep_research_flow/src/deep_research_flow/crews/deep_research_crew/: crew.py  main.py
obsistant/agents/deep_research_flow/src/deep_research_flow/crews/deep_research_crew/config/: agents.yaml  tasks.yaml
obsistant/agents/deep_research_flow/src/deep_research_flow/crews/deep_research_crew/guardrails/: guardrails.py
obsistant/backup/: __init__.py  operations.py
obsistant/config/: __init__.py  env_loader.py  loader.py  schema.py
obsistant/core/: __init__.py  calendar_auth.py  dates.py  file_processing.py  formatting.py  frontmatter.py  memory_storage.py  tags.py
obsistant/meetings/: __init__.py  processor.py
obsistant/notes/: __init__.py  processor.py
obsistant/qdrant/: __init__.py  client.py  ingest.py  server.py
obsistant/vault/: __init__.py  init.py  processor.py
tests/: test_calendar_auth.py  test_cli.py  test_cli_integration.py  test_format_markdown.py  test_processor.py  test_qdrant_client.py  test_qdrant_ingest.py  test_qdrant_server.py  test_table_corruption_regression.py  test_tables.py
tests/fixtures/: edge_cases.md  existing_front_matter_multiple_tags.md  no_front_matter_no_tags.md  no_front_matter_single_tag.md  no_tags.md  table_corrupted_output.md  table_input.md
